Add circleci config file

--- a/build.gradle
+++ b/build.gradle
@@ -23,3 +23,33 @@ plugins {
     id 'com.google.dagger.hilt.android' version "$hiltVersion" apply false
     id 'org.jetbrains.kotlin.jvm' version '1.7.20' apply false
 }
+
+task testAppFeature {
+    doLast {
+        subprojects.forEach {
+            if (it.parent.name == featureName) {
+                def path = it.path
+
+                println "Running test suite for ${featureName}:${it.name}"
+
+                // Run unit test for a java library/kotlin module
+                if (it.plugins.findPlugin('java-library') != null) {
+                    println "Running local java library test suite for ${featureName}:${it.name}"
+                    exec {
+                        executable './gradlew'
+                        args "${path}:test"
+                    }
+                }
+
+                // Run unit test for android library module
+                if (it.plugins.findPlugin('com.android.library') != null) {
+                    println "Running local android library test suite for ${featureName}:${it.name}"
+                    exec {
+                        executable './gradlew'
+                        args "${path}:testDebugUnitTest"
+                    }
+                }
+            }
+        }
+    }
+}
