--- a/features/news/featureTesting/build.gradle
+++ b/features/news/featureTesting/build.gradle
@@ -62,4 +62,5 @@ dependencies {
     testImplementation "androidx.paging:paging-common-ktx:$pagingVersion"
     testImplementation 'com.google.code.gson:gson:2.8.6'
     testImplementation "joda-time:joda-time:2.10.4"
+    testImplementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
 }
